# proiect-ml-laurap1124

./: app.py  clas_hyperparameters.pkl  clasificare.ipynb  main.py  models_data.pkl  pyproject.toml  reg_hyperparameters.pkl  regresie.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
